# progetto-eagle-test

./: CMakeLists.txt  info.md  readme.md  roadmap.md
core/: app.cpp  global.cpp  global.h  main.cpp
core/controller/: auth_controller.cpp  auth_controller.h
core/controllers/: auth_controller.cpp  auth_controller.h  csv_controller.h  file_list_controller.cpp  file_list_controller.h  upload_file_controller.cpp  upload_file_controller.h  user_management_controller.cpp  user_management_controller.h  user_management_controller.h.cpp
core/data/: AppState.h  Fonts.h  global.cpp  global.h  telemetry_data.h  user.h  userData.csv
core/model/: telemetry_data.h  user.h
core/utilities/: csv_parser.cpp  csv_parser.h
core/view/: add_user_view.cpp  add_user_view.h  content_view.cpp  content_view.h  file_list_view.cpp  file_list_view.h  login_view.cpp  login_view.h  main_view.cpp  main_view.h  plot_view.cpp  plot_view.h  table_view.cpp  table_view.h  upload_file_view.cpp  upload_file_view.h  user_management_view.cpp  user_management_view.h
